--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Task list</title>
+    <title>My Task List</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -11,20 +11,20 @@
       <div class="todo-app">
         <h2>
           To-Do List
-          <img draggable="false" src="icons\icons8-list-50.png" alt="TODO Icon" />
+          <img
+            draggable="false"
+            src="icons/icons8-list-50.png"
+            alt="TODO Icon"
+          />
         </h2>
         <div class="row">
           <input type="text" id="input-box" placeholder="Add your text" />
           <button onclick="addTask()">Add</button>
         </div>
-        <ul id="list-container">
-          <!-- <li class="checked">Task 1</li>
-            <li>Task 2</li>
-            <li>Task 3</li> -->
-        </ul>
+        <ul id="list-container"></ul>
       </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
